[shenker/cloning] WIP deg tag placeholders. Currently the placeholder goes on the forward primer, but this should change.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220131 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220131 Deg tags.ipynb
@@ -140,6 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tags\n",
     "tag_part_type = \"ClpXP_tag\"\n",
     "tag_overhangs = workflow.overhangs_for(part_types[tag_part_type])\n",
     "library_primer = \"oLIB46\"\n",
@@ -149,7 +150,14 @@
     "nnk_length = 6  # aa\n",
     "nnk_clpx_length = nnk_length + clpx_tag_length  # aa\n",
     "head_length = 6  # nt\n",
-    "tail_length = clpx_tag_length * 3  # nt"
+    "tail_length = clpx_tag_length * 3  # nt\n",
+    "part_tags = \"degradation clpxp sequestration\"\n",
+    "reference = \"Andersen, J. B., Sternberg, C., Poulsen, L. K., Bjørn, S. P., Givskov, M., & Molin, S. (1998). New unstable variants of green fluorescent protein for studies of transient gene expression in bacteria. Applied and environmental microbiology, 64(6), 2240-2246.\"\n",
+    "\n",
+    "# placeholders\n",
+    "tm_binding = 60\n",
+    "tm_homology = 55\n",
+    "min_mfe = None"
    ]
   },
   {
@@ -306,8 +314,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reference = \"Andersen, J. B., Sternberg, C., Poulsen, L. K., Bjørn, S. P., Givskov, M., & Molin, S. (1998). New unstable variants of green fluorescent protein for studies of transient gene expression in bacteria. Applied and environmental microbiology, 64(6), 2240-2246.\"\n",
-    "\n",
     "base = {\"Author\": \"Jacob Quinn Shenker\", \"Date\": workflow.date()}\n",
     "\n",
     "oligo_base = {\n",
@@ -319,7 +325,7 @@
     "\n",
     "part_base = {\n",
     "    **base,\n",
-    "    \"Tags\": \"degradation clpxp sequestration\",\n",
+    "    \"Tags\": part_tags,\n",
     "    \"Reference\": reference,\n",
     "}\n",
     "\n",
@@ -422,155 +428,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "part_seqs = {name: reg.get(name)[\"_seq\"] for name in part_names}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part_seqs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part_seq = part_seqs[\"sigW\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workflow.find_coding_sequence(part_seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workflow.get_source_plasmid(reg, lib_parts[\"sigW\"][\"Usage\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg.get(\"pLIB214\")[\"_seq\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part_name = part_names[0]\n",
-    "part = reg.get(part_name)\n",
-    "part_seq = part[\"_seq\"]\n",
-    "cds_start, cds_stop = workflow.find_coding_sequence(part_seq)\n",
-    "cds_stop -= 3  # want to insert placeholder before stop codon\n",
-    "plasmid_name = workflow.get_source_plasmid(reg, part[\"Usage\"])\n",
-    "plasmid_seq = reg.get(plasmid_name)[\"_seq\"]\n",
-    "part_start, part_stop, _, _ = sequence.find_subsequence(\n",
-    "    plasmid_seq, part_seq, min_score=len(part_seq)\n",
-    ")\n",
-    "start = part_start + cds_start\n",
-    "stop = part_stop - (len(part_seq) - cds_stop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plasmid_seq_forward = workflow.normalize_seq(plasmid_seq.reindex(stop))\n",
-    "plasmid_seq_reverse = workflow.normalize_seq(\n",
-    "    plasmid_seq.reindex(stop).reverse_complement()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "placeholder = tag_prefix + design.golden_gate_placeholder(\n",
-    "    Restriction.BsaI, None, *degtag_overhangs\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "placeholder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: GC clamp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tm_binding = 60\n",
-    "tm_homology = 55\n",
-    "min_mfe = None\n",
-    "homology = next(\n",
-    "    primers.iter_primers(\n",
-    "        plasmid_seq_forward,\n",
-    "        min_tm=tm_homology,\n",
-    "        min_mfe=min_mfe,\n",
-    "        anchor=\"3prime\",\n",
-    "        gc_clamp=False,\n",
-    "    )\n",
+    "    Restriction.BsaI, None, *tag_overhangs\n",
     ")\n",
-    "reverse_primer = next(\n",
-    "    primers.iter_primers(\n",
-    "        plasmid_seq_reverse,\n",
-    "        min_tm=tm_binding,\n",
-    "        min_length=len(homology),\n",
-    "        min_mfe=min_mfe,\n",
-    "        anchor=\"5prime\",\n",
-    "    )\n",
-    ")\n",
-    "# reverse_primer_seq = sequence.reverse_complement(reverse_primer.binding)\n",
-    "overhang = homology.binding + placeholder\n",
-    "forward_primer = next(\n",
-    "    primers.iter_primers(\n",
-    "        plasmid_seq_forward,\n",
-    "        overhang=overhang,\n",
-    "        min_tm=tm_binding,\n",
-    "        min_mfe=min_mfe,\n",
-    "        anchor=\"5prime\",\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "primer_pair = primers.PrimerPair(forward_primer, reverse_primer)"
+    "# remove downstream overhang because it is already in the storage vector\n",
+    "placeholder = placeholder[: -len(tag_overhangs[1])]"
    ]
   },
   {
@@ -579,7 +441,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "primer_pair"
+    "%%time\n",
+    "placeholder_primers = {}\n",
+    "storage_vector_seqs = {}\n",
+    "for part_name in part_names:\n",
+    "    part = reg.get(part_name)\n",
+    "    part_seq = part[\"_seq\"]\n",
+    "    cds_start, cds_stop = workflow.find_coding_sequence(part_seq)\n",
+    "    cds_stop -= 3  # want to insert placeholder before stop codon\n",
+    "    plasmid_name = workflow.get_source_plasmid(reg, part[\"Usage\"])\n",
+    "    plasmid_seq = reg.get(plasmid_name)[\"_seq\"]\n",
+    "    part_start, part_stop, _, _ = sequence.find_subsequence(\n",
+    "        plasmid_seq, part_seq, min_score=len(part_seq)\n",
+    "    )\n",
+    "    start = part_start + cds_start\n",
+    "    stop = part_stop - (len(part_seq) - cds_stop)\n",
+    "    plasmid_seq_forward = workflow.normalize_seq(plasmid_seq.reindex(stop))\n",
+    "    # we want forward 5' end of forward primer binding site to start after \"ta\" of taa stop codon\n",
+    "    plasmid_seq_forward_midstop = workflow.normalize_seq(plasmid_seq.reindex(stop + 2))\n",
+    "    plasmid_seq_reverse = workflow.normalize_seq(\n",
+    "        plasmid_seq.reindex(stop).reverse_complement()\n",
+    "    )\n",
+    "    homology = next(\n",
+    "        primers.iter_primers(\n",
+    "            plasmid_seq_forward,\n",
+    "            min_tm=tm_homology,\n",
+    "            min_mfe=min_mfe,\n",
+    "            anchor=\"3prime\",\n",
+    "            gc_clamp=False,\n",
+    "        )\n",
+    "    )\n",
+    "    reverse_primer = next(\n",
+    "        primers.iter_primers(\n",
+    "            plasmid_seq_reverse,\n",
+    "            min_tm=tm_binding,\n",
+    "            min_length=len(homology),\n",
+    "            min_mfe=min_mfe,\n",
+    "            anchor=\"5prime\",\n",
+    "        )\n",
+    "    )\n",
+    "    # reverse_primer_seq = sequence.reverse_complement(reverse_primer.binding)\n",
+    "    overhang = homology.binding + placeholder\n",
+    "    forward_primer = next(\n",
+    "        primers.iter_primers(\n",
+    "            plasmid_seq_forward_midstop,\n",
+    "            overhang=overhang,\n",
+    "            min_tm=tm_binding,\n",
+    "            min_mfe=min_mfe,\n",
+    "            anchor=\"5prime\",\n",
+    "        )\n",
+    "    )\n",
+    "    primer_pair = primers.PrimerPair(forward_primer, reverse_primer)\n",
+    "    placeholder_primers[part_name] = primer_pair\n",
+    "    storage_vector_seqs[part_name] = sequence.pcr(\n",
+    "        plasmid_seq, str(primer_pair.primer1), str(primer_pair.primer2)\n",
+    "    ).assemble(method=\"gibson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "placeholder_primers[\"sigW\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "placeholder_primers[\"rsiW\"]"
    ]
   },
   {
@@ -597,26 +531,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "description = \"\"\n",
+    "placeholder_base = {\"Author\": \"Jacob Quinn Shenker\", \"Date\": workflow.date()}\n",
     "\n",
     "placeholder_oligo_base = {\n",
-    "    \"Author\": \"Jacob Quinn Shenker\",\n",
-    "    \"Date\": workflow.date(),\n",
+    "    **placeholder_base,\n",
     "    \"Order date\": workflow.date(),\n",
     "    \"Vendor\": \"IDT\",\n",
     "    \"Type\": \"Primer\",\n",
-    "    \"Description\": description,\n",
     "}\n",
     "\n",
-    "for enzyme_name, flipped, upstream in product(enzymes, (False, True), (False, True)):\n",
-    "    base = {}\n",
-    "    olt[olt.next_id()] = {\n",
-    "        **base,\n",
-    "        \"Name\": \"\",\n",
-    "        \"Sequence\": seq,\n",
-    "        \"Description\": description,\n",
+    "placeholder_part_base = {\n",
+    "    **placeholder_base,\n",
+    "    \"Tags\": part_tags,\n",
+    "    \"Reference\": reference,\n",
+    "}\n",
+    "\n",
+    "# apply = {\"Sequence\": workflow.normalize_seq}\n",
+    "apply = {\"Name\": None}\n",
+    "\n",
+    "for name, row in tags.items():\n",
+    "    # add BsaI flanks\n",
+    "    oligo_seq = (\n",
+    "        design.random_bases(num_random_bases)\n",
+    "        + design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
+    "        + row[\"Sequence\"]\n",
+    "        + sequence.reverse_complement(\n",
+    "            design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
+    "        )\n",
+    "    )\n",
+    "    oligo_seq = workflow.normalize_seq(oligo_seq)\n",
+    "    oligo_seq = oligo_seq + design.random_bases(num_random_bases)\n",
+    "    oligo_id = olib_oligos.upsert(\n",
+    "        {\n",
+    "            **oligo_base,\n",
+    "            **row,\n",
+    "            \"Name\": f\"{name}_sense\",\n",
+    "            \"Sequence\": oligo_seq.upper(),\n",
+    "        },\n",
+    "        apply=apply,\n",
+    "    )\n",
+    "    oligo_id2 = olib_oligos.upsert(\n",
+    "        {\n",
+    "            **oligo_base,\n",
+    "            **row,\n",
+    "            \"Name\": f\"{name}_antisense\",\n",
+    "            \"Sequence\": str(sequence.reverse_complement(oligo_seq)).upper(),\n",
+    "        },\n",
+    "        apply=apply,\n",
+    "    )\n",
+    "    usage = f\"{oligo_id}={oligo_id2}/{enzyme}\"\n",
+    "    part_row = {\n",
+    "        **part_base,\n",
+    "        **row,\n",
+    "        \"Sequence\": workflow.normalize_seq(row[\"Sequence\"]),\n",
+    "        \"Usage\": usage,\n",
+    "        \"Type\": tag_part_type,\n",
+    "        \"Upstream overhang\": tag_overhangs[0],\n",
+    "        \"Downstream overhang\": tag_overhangs[1],\n",
+    "        \"Species/codon usage\": \"E. coli\",\n",
     "    }\n",
-    "    print(name, enzyme_name, flipped, unses)"
+    "    lib_parts[name] = part_row\n",
+    "    # lib_parts.upsert(part_row, apply=apply)"
    ]
   },
   {
