--- a/paulssonlab/src/paulssonlab/shenker/cloning/220201 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220201 Deg tags.ipynb
@@ -144,7 +144,8 @@
     "tag_part_type = \"ClpXP_tag\"\n",
     "tag_overhangs = workflow.overhangs_for(part_types[tag_part_type])\n",
     "library_primer = \"oLIB46\"\n",
-    "enzyme = Restriction.BsaI\n",
+    "tag_enzyme = Restriction.BsaI\n",
+    "placeholder_enzyme = Restriction.BsaI\n",
     "num_random_bases = 6  # random bases to add between enzyme binding site and end of DNA\n",
     "clpx_tag_length = 3  # aa\n",
     "nnk_length = 6  # aa\n",
@@ -336,10 +337,10 @@
     "    # add BsaI flanks\n",
     "    oligo_seq = (\n",
     "        design.random_bases(num_random_bases)\n",
-    "        + design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
+    "        + design.type2s_with_spacer(tag_enzyme, len(tag_overhangs[0]))\n",
     "        + row[\"Sequence\"]\n",
     "        + sequence.reverse_complement(\n",
-    "            design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
+    "            design.type2s_with_spacer(tag_enzyme, len(tag_overhangs[0]))\n",
     "        )\n",
     "    )\n",
     "    oligo_seq = workflow.normalize_seq(oligo_seq)\n",
@@ -348,7 +349,7 @@
     "        oligo_seq = oligo_seq + library_primer_seq\n",
     "        oligo_row = {**oligo_base, **row, \"Name\": name, \"Sequence\": oligo_seq.upper()}\n",
     "        oligo_id = olib_oligos.upsert(oligo_row, apply=apply)\n",
-    "        usage = f\"{oligo_id}~,{library_primer}/{enzyme}\"\n",
+    "        usage = f\"{oligo_id}~,{library_primer}/{tag_enzyme}\"\n",
     "    else:\n",
     "        # not library, just order two oligos to anneal\n",
     "        # in this case, there's no reverse primer binding site,\n",
@@ -359,7 +360,7 @@
     "                **oligo_base,\n",
     "                **row,\n",
     "                \"Name\": f\"{name}_sense\",\n",
-    "                \"Sequence\": oligo_seq.upper(),\n",
+    "                \"Sequence\": workflow.normalize_seq_upper(oligo_seq),\n",
     "            },\n",
     "            apply=apply,\n",
     "        )\n",
@@ -368,11 +369,11 @@
     "                **oligo_base,\n",
     "                **row,\n",
     "                \"Name\": f\"{name}_antisense\",\n",
-    "                \"Sequence\": str(sequence.reverse_complement(oligo_seq)).upper(),\n",
+    "                \"Sequence\": workflow.normalize_seq_upper(oligo_seq),\n",
     "            },\n",
     "            apply=apply,\n",
     "        )\n",
-    "        usage = f\"{oligo_id}={oligo_id2}/{enzyme}\"\n",
+    "        usage = f\"{oligo_id}={oligo_id2}/{tag_enzyme}\"\n",
     "    part_row = {\n",
     "        **part_base,\n",
     "        **row,\n",
@@ -419,7 +420,8 @@
    "outputs": [],
    "source": [
     "# part_names = [\"sigW\", \"rsiW\", \"ECF20_992\", \"AS20_992\", \"sfGFP\"]  # TODO: pick correct FPs\n",
-    "part_names = [\"sigW\", \"rsiW\"]"
+    "part_names = [\"sigW\", \"rsiW\"]\n",
+    "# part_names = [\"rsiW\"]"
    ]
   },
   {
@@ -429,7 +431,7 @@
    "outputs": [],
    "source": [
     "placeholder = tag_prefix + design.golden_gate_placeholder(\n",
-    "    Restriction.BsaI, None, *tag_overhangs\n",
+    "    placeholder_enzyme, None, *tag_overhangs\n",
     ")\n",
     "# remove downstream overhang because it is already in the storage vector\n",
     "placeholder = placeholder[: -len(tag_overhangs[1])]"
@@ -444,21 +446,26 @@
     "%%time\n",
     "placeholder_primers = {}\n",
     "storage_vector_seqs = {}\n",
+    "source_plasmid_names = {}\n",
     "for part_name in part_names:\n",
     "    part = reg.get(part_name)\n",
     "    part_seq = part[\"_seq\"]\n",
     "    cds_start, cds_stop = workflow.find_coding_sequence(part_seq)\n",
     "    cds_stop -= 3  # want to insert placeholder before stop codon\n",
     "    plasmid_name = workflow.get_source_plasmid(reg, part[\"Usage\"])\n",
+    "    source_plasmid_names[part_name] = plasmid_name\n",
     "    plasmid_seq = reg.get(plasmid_name)[\"_seq\"]\n",
     "    part_start, part_stop, _, _ = sequence.find_subsequence(\n",
     "        plasmid_seq, part_seq, min_score=len(part_seq)\n",
     "    )\n",
     "    start = part_start + cds_start\n",
     "    stop = part_stop - (len(part_seq) - cds_stop)\n",
-    "    plasmid_seq_forward = workflow.normalize_seq(plasmid_seq.reindex(stop))\n",
-    "    # we want forward 5' end of forward primer binding site to start after \"ta\" of taa stop codon\n",
-    "    plasmid_seq_forward_midstop = workflow.normalize_seq(plasmid_seq.reindex(stop + 2))\n",
+    "    downstream_overhang_start = part_stop - len(part[\"Downstream overhang\"])\n",
+    "    # we want 5' end of forward primer binding site to start with the downstream overhang\n",
+    "    # (\"aggt\" for CDS parts)\n",
+    "    plasmid_seq_forward = workflow.normalize_seq(\n",
+    "        plasmid_seq.reindex(downstream_overhang_start)\n",
+    "    )\n",
     "    plasmid_seq_reverse = workflow.normalize_seq(\n",
     "        plasmid_seq.reindex(stop).reverse_complement()\n",
     "    )\n",
@@ -467,24 +474,23 @@
     "            plasmid_seq_forward,\n",
     "            min_tm=tm_homology,\n",
     "            min_mfe=min_mfe,\n",
-    "            anchor=\"3prime\",\n",
+    "            anchor=\"5prime\",\n",
     "            gc_clamp=False,\n",
     "        )\n",
     "    )\n",
-    "    reverse_primer = next(\n",
+    "    forward_primer = next(\n",
     "        primers.iter_primers(\n",
-    "            plasmid_seq_reverse,\n",
-    "            min_tm=tm_binding,\n",
+    "            plasmid_seq_forward,\n",
     "            min_length=len(homology),\n",
+    "            min_tm=tm_binding,\n",
     "            min_mfe=min_mfe,\n",
     "            anchor=\"5prime\",\n",
     "        )\n",
     "    )\n",
-    "    # reverse_primer_seq = sequence.reverse_complement(reverse_primer.binding)\n",
-    "    overhang = homology.binding + placeholder\n",
-    "    forward_primer = next(\n",
+    "    overhang = sequence.reverse_complement(placeholder + homology.binding)\n",
+    "    reverse_primer = next(\n",
     "        primers.iter_primers(\n",
-    "            plasmid_seq_forward_midstop,\n",
+    "            plasmid_seq_reverse,\n",
     "            overhang=overhang,\n",
     "            min_tm=tm_binding,\n",
     "            min_mfe=min_mfe,\n",
@@ -499,30 +505,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "placeholder_primers[\"sigW\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "placeholder_primers[\"rsiW\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# primer oligos"
+    "### Oligos"
    ]
   },
   {
@@ -540,52 +526,257 @@
     "    \"Type\": \"Primer\",\n",
     "}\n",
     "\n",
+    "apply = {\"Sequence\": workflow.normalize_seq}\n",
+    "placeholder_oligo_names = {}\n",
+    "\n",
+    "for part_name in part_names:\n",
+    "    name = f\"degtag_ph_{part_name}\"\n",
+    "    description = f\"Adds a deg tag placeholder to {source_plasmid_names[part_name]} ({part_name}).\"\n",
+    "    forward_primer_id = olt_oligos.upsert(\n",
+    "        {\n",
+    "            **placeholder_oligo_base,\n",
+    "            \"Name\": f\"{name}_f\",\n",
+    "            \"Sequence\": workflow.normalize_seq_upper(\n",
+    "                placeholder_primers[part_name].primer1\n",
+    "            ),\n",
+    "            \"Description\": description,\n",
+    "        },\n",
+    "        apply=apply,\n",
+    "    )\n",
+    "    reverse_primer_id = olt_oligos.upsert(\n",
+    "        {\n",
+    "            **placeholder_oligo_base,\n",
+    "            \"Name\": f\"{name}_r\",\n",
+    "            \"Sequence\": workflow.normalize_seq_upper(\n",
+    "                placeholder_primers[part_name].primer2\n",
+    "            ),\n",
+    "            \"Description\": description,\n",
+    "        },\n",
+    "        apply=apply,\n",
+    "    )\n",
+    "    placeholder_oligo_names[part_name] = (forward_primer_id, reverse_primer_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olt_oligos.local"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Storage vectors/parts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.get(\"sigW\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_digest?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = storage_vector_seqs[\"sigW\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_search(s, Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_digest(s, Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(s.cut(2636, 2640)[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss = sequence.DsSeqRecord(\"cagcaGAGACCgagtcacggccaGGTCTCgaggt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ss.cut(33, 32)[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss2 = ss.cut(0, 4)[0]  # [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ss2[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss3 = ss.cut(30, 34)[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ss3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ss3[:32])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ss3.cut(0, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss3.cut(30, 34, keep_single_stranded=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ss3.cut(30, 33)[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_digest(\"cagcaGAGACCgagtcacggccaGGTCTCgaggt\", Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_digest(s, Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "placeholder_part_base = {\n",
     "    **placeholder_base,\n",
-    "    \"Tags\": part_tags,\n",
-    "    \"Reference\": reference,\n",
+    "    #    \"Tags\": part_tags, # ADD TAGS\n",
     "}\n",
     "\n",
-    "# apply = {\"Sequence\": workflow.normalize_seq}\n",
     "apply = {\"Name\": None}\n",
     "\n",
-    "for name, row in tags.items():\n",
-    "    # add BsaI flanks\n",
-    "    oligo_seq = (\n",
-    "        design.random_bases(num_random_bases)\n",
-    "        + design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
-    "        + row[\"Sequence\"]\n",
-    "        + sequence.reverse_complement(\n",
-    "            design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
-    "        )\n",
-    "    )\n",
-    "    oligo_seq = workflow.normalize_seq(oligo_seq)\n",
-    "    oligo_seq = oligo_seq + design.random_bases(num_random_bases)\n",
-    "    oligo_id = olib_oligos.upsert(\n",
-    "        {\n",
-    "            **oligo_base,\n",
-    "            **row,\n",
-    "            \"Name\": f\"{name}_sense\",\n",
-    "            \"Sequence\": oligo_seq.upper(),\n",
-    "        },\n",
-    "        apply=apply,\n",
-    "    )\n",
-    "    oligo_id2 = olib_oligos.upsert(\n",
-    "        {\n",
-    "            **oligo_base,\n",
-    "            **row,\n",
-    "            \"Name\": f\"{name}_antisense\",\n",
-    "            \"Sequence\": str(sequence.reverse_complement(oligo_seq)).upper(),\n",
-    "        },\n",
-    "        apply=apply,\n",
-    "    )\n",
-    "    usage = f\"{oligo_id}={oligo_id2}/{enzyme}\"\n",
+    "for part_name in part_names:\n",
+    "    #### PART SEQUENCE\n",
+    "    #### USAGE\n",
+    "    name = f\"{part_name}_degtag_ph\"\n",
+    "    part = reg.get(part_name)\n",
+    "    # usage = f\"{oligo_id}={oligo_id2}/{part_enzyme}\"\n",
     "    part_row = {\n",
-    "        **part_base,\n",
-    "        **row,\n",
+    "        **placeholder_part_base,\n",
     "        \"Sequence\": workflow.normalize_seq(row[\"Sequence\"]),\n",
     "        \"Usage\": usage,\n",
-    "        \"Type\": tag_part_type,\n",
+    "        \"Type\": part[\"Type\"],\n",
     "        \"Upstream overhang\": tag_overhangs[0],\n",
     "        \"Downstream overhang\": tag_overhangs[1],\n",
     "        \"Species/codon usage\": \"E. coli\",\n",
