[shenker/cloning] As used on 220201 to order deg tag placeholders and barcode placeholders. Did not finish validating barcode placeholders.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220201 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220201 Deg tags.ipynb
@@ -394,16 +394,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "olib_oligos.save()\n",
     "lib_parts.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olib_oligos.save()"
    ]
   },
   {
@@ -588,7 +580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enzyme.re_digest?"
+    "frags = enzyme.re_digest(s, Restriction.BsaI)"
    ]
   },
   {
@@ -597,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = storage_vector_seqs[\"sigW\"]"
+    "frags"
    ]
   },
   {
@@ -606,7 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enzyme.re_search(s, Restriction.BsaI)"
+    "print(frags[0])"
    ]
   },
   {
@@ -615,7 +607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enzyme.re_digest(s, Restriction.BsaI)"
+    "print(frags[1])"
    ]
   },
   {
@@ -624,7 +616,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(s.cut(2636, 2640)[0][0])"
+    "print(frags[2])"
    ]
   },
   {
@@ -633,7 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss = sequence.DsSeqRecord(\"cagcaGAGACCgagtcacggccaGGTCTCgaggt\")"
+    "print(workflow.re_digest_part(reg.get(\"pLIB214\")[\"_seq\"], Restriction.BsaI))"
    ]
   },
   {
@@ -642,121 +634,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(ss)"
+    "print(workflow.re_digest_part(s, Restriction.BsaI))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(ss.cut(33, 32)[0][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ss2 = ss.cut(0, 4)[0]  # [1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ss2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(ss2[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ss3 = ss.cut(30, 34)[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(ss3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(ss3[:32])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(ss3.cut(0, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ss3.cut(30, 34, keep_single_stranded=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(ss3.cut(30, 33)[0][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enzyme.re_digest(\"cagcaGAGACCgagtcacggccaGGTCTCgaggt\", Restriction.BsaI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enzyme.re_digest(s, Restriction.BsaI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "placeholder_part_base = {\n",
@@ -804,6 +690,24 @@
     "# storage vector plasmid entry\n",
     "# storage vector strain entry"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# olib_oligos.save()\n",
+    "olt_oligos.save()\n",
+    "# lib_parts.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
