[shenker/cloning] Barcode placeholder validation failed because I chose the wrong backbone primer pairs when simulating the PCR, not because anything was actually wrong.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220207 Barcode placeholders.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220207 Barcode placeholders.ipynb
@@ -395,16 +395,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e5a0908f-4e51-4f37-9805-10f6a66558f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primers_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "401d1c47-385c-459e-ad91-4d99d912c437",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olib_oligos[\"oLIB176\"][\"Sequence\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4419a5ac-9913-435c-b43d-930b8f07e575",
    "metadata": {},
    "outputs": [],
    "source": [
-    "flipped_, upstream_, ph_name = True, True, \"barcode_ph_BsmBI_upstream\"\n",
+    "# flipped_, upstream_, ph_name = True, True, \"barcode_ph_BsaI_upstream_antiparallel\"\n",
+    "flipped_, upstream_, ph_name = False, True, \"barcode_ph_BsaI_upstream_antiparallel\"\n",
     "\n",
+    "placeholder = lib_parts[ph_name][\"Sequence\"]\n",
     "if flipped_:\n",
     "    primers_ = (\n",
+    "        olib_oligos[\"oLIB177\"][\"Sequence\"],\n",
     "        backbone_primers[\"JUMP_UNS9_flipped_r\"][\"Sequence\"],\n",
-    "        olib_oligos[\"oLIB178\"][\"Sequence\"],\n",
     "    )\n",
     "    nonbarcoded_primers = (\n",
     "        olib_oligos[\"oLIB177\"][\"Sequence\"],\n",
@@ -421,7 +443,6 @@
     "    )\n",
     "backbone_product = sequence.pcr(template, *primers_)\n",
     "nonbarcoded_backbone_product = sequence.pcr(template, *nonbarcoded_primers)\n",
-    "placeholder = lib_parts[ph_name][\"Sequence\"]\n",
     "dummy_insert = (\n",
     "    lib_parts[\"UNS1\"][\"Sequence\"]\n",
     "    + \"A\" * 30\n",
@@ -435,7 +456,105 @@
     "    frags = [dummy_insert, placeholder, backbone_product]\n",
     "barcoded_product = sequence.assemble(frags, method=\"gibson\")\n",
     "nonbarcoded_product = sequence.assemble(\n",
-    "    [nonbarcoded_backbone_product, dummy_insert], method=\"gibson\"\n",
+    "    [dummy_insert, nonbarcoded_backbone_product], method=\"gibson\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2047812d-32fd-4296-9a85-142f87e25669",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(barcoded_product.seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0f1c2a4-0b8f-44a9-8bbe-cabfd986a1cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.assemble([placeholder, dummy_insert], method=\"gibson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a569fb4-dea0-4240-96c5-7b319bd794d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.assemble([dummy_insert, backbone_product], method=\"gibson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b891b4e-4826-43d2-923a-07884d346730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "barcoded_insert = (\n",
+    "    lib_parts[\"UNS9\"][\"Sequence\"]\n",
+    "    + \"A\" * 30\n",
+    "    + \"G\" * 5\n",
+    "    + \"A\" * 10\n",
+    "    + lib_parts[\"UNS10\"][\"Sequence\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79616e59-6807-4c39-be31-57fb0bad09f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backbone_product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc29e5ca-cd0d-4f44-95bd-daa2ace767c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lib_parts[\"UNS10\"][\"Sequence\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4590dfa2-bbac-44ac-9bef-c053528913c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.assemble([barcoded_insert, backbone_product], method=\"gibson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b3c7f51-2d95-4ed7-97ef-40a5bbbaedbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "539ecc28-ebcd-42f5-acb0-7bc4d82f6692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nonbarcoded_product = sequence.assemble(\n",
+    "    [dummy_insert, nonbarcoded_backbone_product], method=\"gibson\"\n",
     ")"
    ]
   },
@@ -476,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(frags[2])"
+    "print(frags[2].seq)"
    ]
   },
   {
