[api,shenker/cloning] dump_geneious done for SeqRecords. Added fuzzy interval handling, reference author splitting, genbank ID handling, and a couple other small metadata handling tweaks.Please enter the commit message for your changes. Lines starting

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220214 Geneious prototype.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220214 Geneious prototype.ipynb
@@ -39,6 +39,7 @@
    "source": [
     "import paulssonlab.api.benchling as bapi\n",
     "import paulssonlab.cloning.registry as registry\n",
+    "import paulssonlab.cloning.io as cio\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.api.geneious as geneious\n",
     "import paulssonlab.api.geneious_db as g"
@@ -195,6 +196,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "63ab9be5-6193-4435-8e09-5dbf739cb46a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = seq3.features[4].location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c62da4c-0003-4974-986c-dea5b19e261f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x._end??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3ecc05f9-e615-40bf-b0a3-285561a0fe89",
    "metadata": {},
    "outputs": [],
@@ -209,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = etree.tostring(geneious.dump_geneious(seq), pretty_print=True)"
+    "output = etree.tostring(geneious.dump_geneious(seq4), pretty_print=True)"
    ]
   },
   {
@@ -220,6 +241,88 @@
    "outputs": [],
    "source": [
     "print(output.decode())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b90ad085-3e99-4f68-b482-70b8ee85d5e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "557cfeac-4f8c-43a9-a453-10b2ce40a0e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epoch = datetime.datetime(1970, 1, 1, 0, 0, 0)\n",
+    "int(\n",
+    "    (datetime.datetime.strptime(\"29-OCT-2018\", \"%d-%b-%Y\") - epoch).total_seconds()\n",
+    "    * 1000\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e970060b-6e03-4d8b-9c57-3db08a5c682f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6df16c4-cd4d-4c55-b5ef-734763817a5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1540785600000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df53435e-58db-410f-8f85-f8bf5e97acac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq4.annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b357d984-c68f-45e6-8bc7-78ab1ee77144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq4.annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39d9098b-1d0e-4fa7-a6f6-ff254cf0184c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq4.features[0].qualifiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f44068ca-5a2f-402a-af83-3fb240bde497",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(seq4.annotations[\"references\"][0])"
    ]
   },
   {
@@ -598,6 +701,56 @@
    "source": [
     "q = select(g.AnnotatedDocument)\n",
     "rows = conn.execute(q).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b64ad9c9-57a9-4f46-a73a-6c5afa415e29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc4 = rows[-1][\"plugin_document_xml\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53e3d43c-7095-46f5-8f48-0890cc6305e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb5d754b-bff4-45d3-babe-c3a4b1cba999",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq4 = cio.read_file(os.path.expanduser(\"/Users/jacob/Downloads/_plasmids/genbank2.gb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd39aa8a-9765-412c-ace6-706e5e16c11b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "252a5d6c-648d-47d8-9467-544414fad164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(doc4)"
    ]
   },
   {
