[api,shenker/cloning] load_geneious seems to work for plasmids, have not checked round-tripping yet.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220215 Geneious prototype.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220215 Geneious prototype.ipynb
@@ -236,6 +236,134 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "098349f4-112b-4dd2-b61b-a1e6c558f8db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = etree.fromstring(doc4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbe5745b-6639-4df5-b4a3-e5b84c1c5ca1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geneious.load_geneious(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9a4b0ca-3b1b-431c-a051-a26cfc716f10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq4.annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2b98dfa-1646-49a8-b4d7-004ec753ac5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq4.annotations[\"references\"][0].__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3138ee08-c260-4809-9e0a-809e6ea12ce1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geneious.loads_geneious(doc4).annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efc2ee73-b43c-4648-bb88-47ee2271c7bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.find(\"charSequence\").text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e9e8580-6001-4cbe-aac9-1ac57bebb82f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.find(\"fields\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea2c1e13-d79a-455e-8d3b-8961fa733e11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79c38d78-e91d-4255-80ef-c7c5833c33a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca399dfa-5453-4bdf-aa53-8584f339c07d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.findall(\"nucleotideSequence\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f7cb422-f1be-4135-a7df-5d2b9bc3b9e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = x.find(\"fields\")  # .find(\"overrideDocumentType\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "405a074f-a472-4a24-9361-24698e22aad8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.getchildren()[0].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ae0f4b6-a53b-4b5c-900d-f1c454fa173a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "71529d9c-7282-4a6f-b952-70db9c46df4d",
    "metadata": {},
    "outputs": [],
@@ -244,375 +372,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b90ad085-3e99-4f68-b482-70b8ee85d5e3",
+   "cell_type": "markdown",
+   "id": "2abb49d4-8d26-4d9e-9a7c-5fd6af878434",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import datetime"
+    "## Round-trip: seq->geneious-seq"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "557cfeac-4f8c-43a9-a453-10b2ce40a0e7",
+   "cell_type": "markdown",
+   "id": "754dda07-c981-4436-a94d-dda0c7f96d6f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "epoch = datetime.datetime(1970, 1, 1, 0, 0, 0)\n",
-    "int(\n",
-    "    (datetime.datetime.strptime(\"29-OCT-2018\", \"%d-%b-%Y\") - epoch).total_seconds()\n",
-    "    * 1000\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e970060b-6e03-4d8b-9c57-3db08a5c682f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6df16c4-cd4d-4c55-b5ef-734763817a5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1540785600000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df53435e-58db-410f-8f85-f8bf5e97acac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq4.annotations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b357d984-c68f-45e6-8bc7-78ab1ee77144",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq4.annotations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39d9098b-1d0e-4fa7-a6f6-ff254cf0184c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq4.features[0].qualifiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f44068ca-5a2f-402a-af83-3fb240bde497",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(seq4.annotations[\"references\"][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f788cdbf-332b-478d-b71d-40f326b53830",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(diff_texts(doc2, output))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec103ed7-fecb-4696-889a-2f559dc278cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "231472b8-a28b-43bd-be4e-a016ba79665f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq.features[7].qualifiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "486f0408-9e2e-40d5-ad15-f7ec3bd044e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50fcae75-6e2a-4d51-b398-cb4744f41efe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z.parts??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d862ade5-1300-4436-b454-37ad4d5ac9d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq.features[0].location.parts??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3b6a542-210c-4cf9-be08-6066190cc55a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq.features[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4cb9cf47-33db-419f-89ba-86614429e5c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e53560d-fa09-4ab6-a776-88625b020a38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = seq.annotations[\"references\"][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da67a34f-1a55-451a-8a13-691021701549",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = y.location[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b25148ef-e390-4014-9cc8-528b6bfc552d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z.nofuzzy_start"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c07a2144-7ef4-4034-a871-fc6dc901e8e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(doc2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c772260c-871d-422a-a48b-da2485dfd50f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d[\"XMLSerialisableRootElement\"][\"fields\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53f93346-90a1-4f9e-8da6-0202914910c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = d[\"XMLSerialisableRootElement\"][\"nucleotideSequence\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4bbdd4e-3898-4486-91cc-685cc94dca14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00ad1cc6-ea67-4db9-931c-086a1ca07b79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x[\"fields\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb682e50-b7a1-4f14-975d-978a042fee04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x2 = d2[\"XMLSerialisableRootElement\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2bf5885-73a6-4f82-b24c-9b4dd7249989",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x2.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27afade6-32c8-4790-9b10-3b659fe0f9c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x2[\"fields\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42963582-64e4-45b8-a63b-97f5efbb7648",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x2[\"description\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6628310d-37bf-42dc-8ff0-e9f260805ec5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x2[\"INSD_originalElements\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba53f972-3d95-4778-8977-f8c939c51e35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq.annotations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a940a9a-dab9-4158-9d22-d0dd567241b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.DsSeqRecord?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ad347df-9bff-45a1-976e-0d7786cf5d1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x2[\"sequenceAnnotations\"][\"annotation\"][0]  # .keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2c93203-b528-4b68-a2ed-3786ec3ca668",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq.annotations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a32d29f-cf85-401a-8df5-6bd3ec22f279",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = seq.features[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "599b84ae-0132-4aed-8122-dc078efac00e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f.strand"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a804abb1-bcee-4b67-ae95-da7728011e50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f.qualifiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d7db82a-6f8b-43bc-ac2c-c69515a74c90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f"
+    "## Round-trip: geneious->seq->geneious"
    ]
   },
   {
@@ -701,6 +473,16 @@
    "source": [
     "q = select(g.AnnotatedDocument)\n",
     "rows = conn.execute(q).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d707036c-3b18-49d6-bb23-00855fe29756",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc0 = rows[0][\"plugin_document_xml\"]"
    ]
   },
   {
